added script to resize the vm volumes during provisioning

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ crash.*.log
 # to change depending on the environment.
 *.tfvars
 *.tfvars.json
+**.pem
+.env
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
@@ -41,5 +43,6 @@ terraform.rc
 # Ignore SAST scans
 **checkov*
 
-**.pem
-
+*.go
+go.mod
+go.sum
