--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Local .terraform directories
 **/.terraform/*
+.debug.prod.sh
 
 # .tfstate files
 *.tfstate
@@ -37,9 +38,12 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+.terraform.lock.hcl
 
 **/backend*.hcl
 
 # Ignore SAST scans
 **checkov*
+
+
 
